<resources>
    <string name="app_name">To-Do-List</string>
    <string name="task">Tasks</string>
    <string name="calender">Calender</string>
    <string name="my">My</string>
    <string name="category_All">All</string>
    <string name="category_Job">Work</string>
    <string name="category_Wish">Wishlist</string>
    <string name="category_Birthday">Birthday</string>
    <string name="category_Personal">Personal</string>
    <string name="nav_open">navigation open</string>
    <string name="nav_close">navigation close</string>
    <string name="enterTask">Enter New Task</string>
    <string name="chooseText">Choose Category</string>
    <string name="completed">Completed Task</string>
    <string name="setting">Settings</string>
    <string name="Logout">Log Out</string>

    <string name="mineHeader">Mine</string>
    <string name="completedTask">Completed Task</string>
    <string name="pendingTask">Pending Task</string>
    <string name="progress">Daily Progress</string>
    <string name="nextWeek">Tasks In Next 7 Days</string>
    <string name="Overview">Task Overview</string>
    <string name="pendingCategories">Pending Tasks In Categories</string>

    <string name="signUp">Sign Up</string>
    <string name="hello">Hello</string>
    <string name="Login">Login</string>
    <string name="Back">Back </string>
    <string name="there">There! </string>
    <string name="Welcome">Welcome </string>

    <string name="credentials">Enter Details Below </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="complete">Complete</string>
</resources>