<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner"
    app:cardCornerRadius="10dp"
    android:layout_marginHorizontal="25dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseText"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_margin="20dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#F2F6F6"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_All"
                android:textSize="18sp"
                android:layout_margin="15dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioALL"
                android:layout_alignParentEnd="true"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_margin="15dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#F2F6F6"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_Personal"
                android:textSize="18sp"
                android:layout_margin="15dp"/>

            <RadioButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/radioPersonal"
                android:layout_alignParentEnd="true"
                android:layout_margin="15dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#F2F6F6"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_Job"
                android:textSize="18sp"
                android:layout_margin="15dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioWork"
                android:layout_alignParentEnd="true"
                android:layout_margin="15dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#F2F6F6"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_Wish"
                android:textSize="18sp"
                android:layout_margin="15dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:id="@+id/wishList"
                android:layout_margin="15dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#F2F6F6"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_Birthday"
                android:textSize="18sp"
                android:layout_margin="15dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:id="@+id/radioBirthday"
                android:layout_margin="15dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:backgroundTint="@null"
        android:id="@+id/save_catg_btn"
        android:background="@drawable/save_btn_bg"
        android:backgroundTint="@color/grey"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:text="Save"
        android:textSize="18sp"
        />
    </LinearLayout>
</androidx.cardview.widget.CardView>

</LinearLayout>