<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/skyBlue"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/skyBlue"
                android:layout_centerInParent="true"
                app:cardCornerRadius="30dp"
                android:layout_marginHorizontal="30dp"
                app:cardElevation="4dp"
                android:outlineAmbientShadowColor="@color/skyBlue"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/hello_id_holder"
                        android:layout_marginTop="20dp"
                        android:layout_centerHorizontal="true"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Welcome"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Back"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:textColor="#2532A4"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/signUp_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Login"
                        android:layout_below="@id/hello_id_holder"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/credential_id_holder"
                        android:text="@string/credentials"
                        android:layout_below="@id/signUp_id"
                        android:layout_marginStart="20dp"
                        android:textSize="15sp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:id="@+id/Email_ET"
                        android:layout_below="@id/credential_id_holder"
                        android:background="@drawable/edittext_bg"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="15dp"
                        android:hint="Enter Email"
                        android:paddingStart="10dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:id="@+id/pasword_ET"
                        android:layout_below="@id/Email_ET"
                        android:background="@drawable/edittext_bg"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="15dp"
                        android:hint="Enter Password"
                        android:paddingStart="10dp"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:id="@+id/btn_Login"
                        android:text="@string/Login"
                        android:layout_below="@id/pasword_ET"
                        android:layout_marginTop="20dp"
                        app:backgroundTint="@null"
                        android:background="@drawable/save_btn_bg"
                        android:backgroundTint="@color/grey"
                        android:layout_marginHorizontal="20dp"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:id="@+id/btn_signUP"
                        android:text="@string/signUp"
                        android:textColor="@color/grey"
                        android:layout_below="@id/btn_Login"
                        android:layout_marginTop="20dp"
                        app:backgroundTint="@null"
                        android:background="@drawable/loginbtn_bg"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginBottom="30dp"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>