<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/boneWhite"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

   <RelativeLayout
       android:id="@+id/content_frame"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >
       <com.google.android.material.appbar.AppBarLayout
           android:id="@+id/appbar_id"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/boneWhite"
           android:fitsSystemWindows="true">

           <androidx.appcompat.widget.Toolbar
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent">

                   <TextView
                       android:id="@+id/text_task_id"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:paddingTop="10dp"
                       android:text="@string/task"
                       android:textSize="28sp"
                       android:textStyle="bold"

                       />

                   <ImageView
                       android:id="@+id/search_icon"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_alignParentEnd="true"
                       android:padding="15dp"
                       android:paddingEnd="20dp"
                       android:src="@drawable/search"

                       />

                   <ImageView
                       android:id="@+id/template_icon"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_toLeftOf="@id/search_icon"
                       android:padding="15dp"
                       android:paddingEnd="10dp"
                       android:src="@drawable/template"

                       />
               </RelativeLayout>
           </androidx.appcompat.widget.Toolbar>

       </com.google.android.material.appbar.AppBarLayout>

       <HorizontalScrollView
           android:id="@+id/scrollView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@id/appbar_id"
           android:background="@color/white"
           android:scrollbars="none">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="horizontal">

               <androidx.cardview.widget.CardView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="15dp"
                   android:layout_marginVertical="10dp"
                   app:cardCornerRadius="10dp"
                   android:background="@drawable/category_bg"
                   android:backgroundTint="@color/boneWhite"
                   android:elevation="0dp"
                   android:outlineSpotShadowColor="@android:color/transparent">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginHorizontal="12dp"
                       android:padding="3dp"

                       android:text="@string/category_All"
                       android:textSize="15sp" />
               </androidx.cardview.widget.CardView>

               <androidx.cardview.widget.CardView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="15dp"
                   android:layout_marginVertical="10dp"
                   android:background="@drawable/category_bg"
                   android:backgroundTint="@color/boneWhite"
                   android:elevation="0dp"
                   app:cardCornerRadius="10dp"
                   android:outlineSpotShadowColor="@android:color/transparent">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginHorizontal="10dp"
                       android:padding="3dp"
                       android:text="@string/category_Personal"

                       android:textSize="15sp" />
               </androidx.cardview.widget.CardView>

               <androidx.cardview.widget.CardView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="15dp"
                   android:layout_marginVertical="10dp"
                   android:background="@drawable/category_bg"
                   android:backgroundTint="@color/boneWhite"
                   android:elevation="0dp"
                   app:cardCornerRadius="10dp"
                   android:outlineSpotShadowColor="@android:color/transparent">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginHorizontal="10dp"
                       android:padding="3dp"
                       android:text="@string/category_Job"

                       android:textSize="15sp" />
               </androidx.cardview.widget.CardView>

               <androidx.cardview.widget.CardView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="15dp"
                   android:layout_marginVertical="10dp"
                   android:background="@drawable/category_bg"
                   android:backgroundTint="@color/boneWhite"
                   android:elevation="0dp"
                   app:cardCornerRadius="10dp"
                   android:outlineSpotShadowColor="@android:color/transparent">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginHorizontal="10dp"
                       android:padding="3dp"
                       android:text="@string/category_Wish"

                       android:textSize="15sp" />
               </androidx.cardview.widget.CardView>

               <androidx.cardview.widget.CardView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_margin="10dp"
                   android:background="@drawable/category_bg"
                   android:backgroundTint="@color/boneWhite"
                   android:elevation="0dp"
                   app:cardCornerRadius="10dp"
                   android:outlineSpotShadowColor="@android:color/transparent">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginHorizontal="10dp"
                       android:padding="3dp"
                       android:text="@string/category_Birthday"
                       android:textSize="15sp" />
               </androidx.cardview.widget.CardView>
           </LinearLayout>
       </HorizontalScrollView>

       <androidx.coordinatorlayout.widget.CoordinatorLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
          >

           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent" />

           <com.google.android.material.bottomappbar.BottomAppBar
               android:id="@+id/bottom_app_bar"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="bottom"
               android:backgroundTint="@color/white"
               app:fabAlignmentMode="center"
               app:fabAnchorMode="cradle"
               app:fabCradleMargin="10dp"
               app:fabCradleRoundedCornerRadius="50dp"
               app:fabCradleVerticalOffset="10dp"

               >

               <com.google.android.material.bottomnavigation.BottomNavigationView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:id="@+id/bottom_nav_view"
                   android:background="@android:color/transparent"
                   app:itemActiveIndicatorStyle="@null"
                   app:labelVisibilityMode="unlabeled"
                   app:menu="@menu/bottom_menue" />

           </com.google.android.material.bottomappbar.BottomAppBar>

           <com.google.android.material.floatingactionbutton.FloatingActionButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:backgroundTint="@color/grey"
               android:id="@+id/add_btn"
               android:src="@drawable/add"
               android:tint="@color/black"
               android:contentDescription="@string/app_name"
               app:layout_anchor="@id/bottom_app_bar"
               app:shapeAppearanceOverlay="@style/fab_style" />
       </androidx.coordinatorlayout.widget.CoordinatorLayout>
   </RelativeLayout>
<com.google.android.material.navigation.NavigationView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>