<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Person_fragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/skyBlue"
            android:fitsSystemWindows="true">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_task_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/mineHeader"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textStyle="bold"

                        />


                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appbar_id"
            android:fitsSystemWindows="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:id="@+id/user_info_Card"
                    android:layout_height="70dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginHorizontal="15dp">
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   >
                   <ImageView
                       android:id="@+id/profile_img"
                       android:layout_width="60dp"
                       android:layout_height="match_parent"
                       android:src="@drawable/profile_image"
                       android:layout_marginStart="10dp"
                       android:contentDescription="@string/app_name"
                       android:layout_centerVertical="true"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="User Name"
                       android:id="@+id/userNameText"
                       android:layout_toRightOf="@id/profile_img"
                       android:layout_margin="15dp"
                       android:textSize="16sp"
                       android:layout_centerVertical="true"

                       android:textColor="@color/black"/>

               </RelativeLayout>

                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Overview"
                    android:textStyle="bold"
                    android:textColor="#AAAAAA"
                    android:textSize="20dp"
                    android:layout_margin="20dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="20dp"
                    >
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:id="@+id/completed_task_idHolder"
                        android:layout_weight="1"
                        app:cardCornerRadius="10dp"
                        android:layout_marginEnd="10dp">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            >
                            <TextView
                                android:id="@+id/completeTaskCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textSize="30sp"
                                android:layout_centerInParent="true"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/completedTask"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="10dp"
                                android:textSize="18sp"
                                />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:id="@+id/pending_task_idHolder"
                        app:cardCornerRadius="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            >
                            <TextView
                                android:id="@+id/pendingTaskCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textSize="30sp"
                                android:layout_centerInParent="true"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pendingTask"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="10dp"
                                android:textSize="18sp"
                                />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

               <androidx.cardview.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="300dp"
                   android:layout_margin="20dp"
                   app:cardCornerRadius="10dp"
                   >
                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       >

                       <TextView
                           android:id="@+id/tv_id_progress"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/progress"
                           android:textSize="18sp"
                           android:layout_margin="20dp"
                           android:textStyle="bold"
                           android:textColor="#AAAAAA"/>

                      <com.github.mikephil.charting.charts.BarChart
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:layout_below="@id/tv_id_progress"
                          android:id="@+id/barChart"
                          />

                   </RelativeLayout>
               </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="40dp"/>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</FrameLayout>